<resources>
    <string name="app_name">Thumb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="del">Cancel</string>

    <string name="To_Do_List">ToDo List</string>
    <string name="Shopping_List">Shopping List</string>
    <string name="Bought_list">Bought List</string>
    <string name="Appointments">Appointments</string>
    <string name="Diary">Diary</string>
    <string name="Save">Save  </string>
    <string name="Delete">Delete </string>
    <string name="Delete_all">Delete All</string>
    <string name="Edit">Edit  </string>
    <string name="Bought">Bought </string>
    <string name="Unbought">Unbought </string>
    <string name="Clear">Clear </string>
    <string name="itemName">Item Name Here</string>
    <string name="quantity">Quantity Here</string>
    <string name="Add_item">Add New \nItem</string>
    <string name="Bought_Items">Bought \nItems</string>
    <string name="name_one_element">Name here</string>
    <string name="Qty_one_element">Qty here</string>
    <string name="Quantity">Quantity :</string>
    <string name="Added_On">Added On</string>
    <string name="date">Date</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="title_activity_diary_add">DiaryAddActivity</string>
    <string name="title_activity_diary_lists">DiaryListsActivity</string>
    <string name="diary">Diary</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="select_time">Select Time</string>
    <string name="content_here">Content Here</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_test">Test</string>
    <string name="user_name">User Name</string>
    <string name="pass_word">Password</string>
    <string name="confirm_pass_word">Confirm Password</string>
    <string name="setup_profile">Setup your profile</string>
    <string name="login">Login</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="auto_login">Auto Login</string>
    <string name="auto_log_des">By enabling this option you can skip password asking</string>
<!--Savindri-->
    <string name="plus">+</string>
    <string name="hint_task">Enter Task</string>
    <string name="hint_date">Enter Date</string>
    <string name="hint_time">Enter Time</string>

    <!--CHAMIKA-->

    <string name="update1">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="add1">+</string>
</resources>
