<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>
