<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_name_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_one_element"
            android:textColor="@android:color/black"
            android:textSize="@dimen/item_name_size_one_element" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/qty_size_one_element"
                android:textColor="@android:color/black"
                android:text="@string/Quantity"/>

            <TextView
                android:id="@+id/item_qty_shopping_list"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:textSize="@dimen/qty_size_one_element"
                android:text="@string/Qty_one_element"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/Added_On"
                    android:textSize="@dimen/Created_On"
                    />

                <TextView
                    android:id="@+id/created_date_shopping_list"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/date"
                    android:textSize="@dimen/date"
                    />

            </LinearLayout>



            <TextView
                android:id="@+id/item_id_shopping_list"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/edit_shopping_list"
                android:onClick="editItem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/btn_height_one_element"
                android:text="@string/Edit"
                android:background="@drawable/edit_btn_one_element_bg"
                android:layout_margin="2dp"/>


            <Button
                android:id="@+id/bought_shopping_list"
                android:onClick="boughtItem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/btn_height_one_element"
                android:text="@string/Bought"
                android:background="@drawable/bought_btn_one_element_bg"
                android:layout_margin="2dp"/>

            <Button
                android:id="@+id/delete_shopping_list"
                android:onClick="deleteItemShoppingList"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/btn_height_one_element"
                android:text="@string/Delete"
                android:background="@drawable/delete_btn_one_element_bg"
                android:layout_margin="2dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>