<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity"
    android:padding="20dp"
    android:layout_gravity="center_vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:src="@drawable/tap"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_profile"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/user_name"
        android:textSize="@dimen/textview_text_size"
        />

    <EditText
        android:id="@+id/et_welcome_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimen/edit_text_padding_size"
        android:inputType="text"
        android:autofillHints="no" />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pass_word"
        android:textSize="@dimen/textview_text_size"
        />

    <EditText
        android:id="@+id/et_welcome_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimen/edit_text_padding_size" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/confirm_pass_word"
        android:textSize="@dimen/textview_text_size"
        />

    <EditText
        android:id="@+id/et_welcome_confirmed_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimen/edit_text_padding_size" />

    <Button
        android:onClick="saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/btn_background"
        android:layout_margin="20dp"
        android:text="@string/Save"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>