<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DiaryEditActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:padding="20sp"
        android:src="@drawable/diary"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/diary_edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_top"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:padding="@dimen/date_time_text_padding"
        android:gravity="center_horizontal"
        android:background="@drawable/box_background"
        android:hint="@string/select_date"
      />

    <TextView
        android:id="@+id/diary_edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_top"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:background="@drawable/box_background"
        android:gravity="center_horizontal"
        android:padding="@dimen/date_time_text_padding"
        android:hint="@string/select_time"
        />

    <EditText
        android:id="@+id/diary_edit_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:background="@drawable/box_background"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/margin_top"
        android:hint="@string/content_here"
        android:inputType="textPersonName"
        android:padding="30px"
      />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:onClick="updateDiaryEntry"
            android:background="@drawable/green_box_background"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_box_background"
            android:onClick="clearDiaryUpdate"
            android:text="@string/Clear" />


    </LinearLayout>


</LinearLayout>