<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:padding="20dp"
    android:layout_gravity="center_vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/user_name"
        android:textSize="@dimen/textview_text_size"/>

    <EditText
        android:id="@+id/profile_user_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_bg"
        android:inputType="text"
        android:padding="@dimen/edit_text_padding_size"
        />



    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pass_word"
        android:textSize="@dimen/textview_text_size"
        />

    <EditText
        android:id="@+id/profile_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimen/edit_text_padding_size"
        tools:targetApi="o"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/confirm_pass_word"
        android:textSize="@dimen/textview_text_size"/>

    <EditText
        android:id="@+id/profile_confirmed_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimen/edit_text_padding_size"
        android:inputType="textPassword" />

    <Button
        android:onClick="update"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="18sp"
        android:background="@drawable/btn_background"
        android:layout_margin="20dp"
        android:text="@string/update"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>