<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/diary_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"
            android:textSize="@dimen/item_name_size_one_element" />

        <TextView
            android:id="@+id/diary_item_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdtp_time"
            android:gravity="center"
            android:textSize="@dimen/item_name_size_one_element" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/diary_item_id"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/diary_item_content"
                android:layout_width="0sp"
                android:layout_height="62dp"
                android:layout_weight="4"
                android:inputType="textMultiLine"
                android:padding="@dimen/edit_text_padding_size"
                android:text="description"
                android:textSize="@dimen/qty_size_one_element" />


            <Button
                android:layout_width="70sp"
                android:layout_height="30sp"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:background="@drawable/green_box_background"
                android:onClick="editDiaryItem"
                android:text="@string/Edit"

                />

            <Button
                android:layout_width="70sp"
                android:layout_height="30sp"
                android:background="@drawable/red_box_background"
                android:onClick="deleteDiaryItem"
                android:text="@string/Delete" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>