<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:src = "@drawable/tap"
        android:padding="@dimen/main_image_padding_size"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:onClick="redirectToDoList"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:padding="@dimen/card_padding_size"
                    android:layout_margin="@dimen/card_margin_size"

                    >
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/to_do_list"
                        android:padding="@dimen/icon_padding_size"
                        />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/To_Do_List"
                    android:textSize="@dimen/card_text_size"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryText"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:onClick="redirectAppointments"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:padding="@dimen/card_padding_size"
                    android:layout_margin="@dimen/card_margin_size"

                    >
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/appointment"
                        android:padding="@dimen/icon_padding_size"
                        />

                </android.support.v7.widget.CardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Appointments"
                    android:textSize="@dimen/card_text_size"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryText"
                    />


            </LinearLayout>


        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:onClick="redirectDiary"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:padding="@dimen/card_padding_size"
                    android:layout_margin="@dimen/card_margin_size"

                    >
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/diary"
                        android:padding="@dimen/icon_padding_size"
                        />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Diary"
                    android:textSize="@dimen/card_text_size"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryText"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="redirectShoppingList"
                android:orientation="vertical"

                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/card_margin_size"
                    android:layout_weight="5"
                    android:padding="@dimen/card_padding_size"

                    >

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/icon_padding_size"
                        android:src="@drawable/cart" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/Shopping_List"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/card_text_size"

                    />

            </LinearLayout>



        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />



</LinearLayout>